# logfloat

./: .travis.yml  ANN  CHANGELOG  INSTALL  LICENSE  README.md  Setup.hs  TODO  VERSION  lhs2hs.hs  logfloat-HCAR.tex  logfloat.cabal  numbers-logfloat.cabal
.github/workflows/: ci.yml
Data/Number/: LogFloat.hs  LogFloat.lhs  PartialOrd.hs  RealToFrac.hs  Transfinite.hs
Hugs/: RealFloat.hs
src/Data/Number/: LogFloat.hs  PartialOrd.hs  RealToFrac.hs  Transfinite.hs
src/Data/Number/LogFloat/: Raw.hs
src/Hugs/: RealFloat.hs
test/: Log1p.hs
test/Data/Number/LogFloat/: Corners.hs  IArrayTest.hs
