----------------------------------------------------------------
-- wren ng thornton <wren@cpan.org>                 ~ 2008.08.01
----------------------------------------------------------------

Name:           numbers-logfloat
Version:        0.8.1
Cabal-Version:  >= 1.2
Build-Type:     Custom
Stability:      stable
Copyright:      Copyright (c) 2007--2008 wren ng thornton
License:        BSD3
License-File:   LICENSE
Author:         wren ng thornton
Maintainer:     wren@community.haskell.org
Homepage:       http://code.haskell.org/~wren/
Category:       List
Synopsis:       Log-domain floating point numbers
Description:    This module presents a class for storing numbers
                in the log-domain. The main reason for doing this
                is to prevent underflow when multiplying many
                probabilities as is done in Hidden Markov Models.
                It is also helpful for preventing overflow.

Library
    Exposed-Modules: Data.Number.LogFloat
    Build-Depends:   base
    Ghc-Options:     -O2 -fvia-C -optc-O2

----------------------------------------------------------------
----------------------------------------------------------- fin.
